// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Col /> No params + applyClass='main' -> class='col main' 1`] = `
<div
  className="col main"
>
  hi
</div>
`;

exports[`<Col /> No params -> class='col' 1`] = `
<div
  className="col"
>
  hi
</div>
`;

exports[`<Col /> align={AlignSelf.End} -> class='col align-self-end' 1`] = `
<div
  className="col align-self-end"
>
  hi
</div>
`;

exports[`<Col /> align={AlignSelf.End} applyClass='some' -> class='col align-self-end some' 1`] = `
<div
  className="col align-self-end some"
>
  hi
</div>
`;

exports[`<Col /> col='1' -> class='col-1' 1`] = `
<div
  className="col-1"
>
  hi
</div>
`;

exports[`<Col /> col='1' offsetLg={4} -> class='col-1 offset-lg-4' 1`] = `
<div
  className="col-1 offset-lg-4"
>
  hi
</div>
`;

exports[`<Col /> col='auto' -> class='col-auto' 1`] = `
<div
  className="col-auto"
>
  hi
</div>
`;

exports[`<Col /> col='true' lg={2} md='auto' -> class='col col-md-auto col-lg-2 1`] = `
<div
  className="col col-md-auto col-lg-2"
>
  hi
</div>
`;

exports[`<Col /> offset={2} -> class='col offset-3' 1`] = `
<div
  className="col offset-3"
>
  hi
</div>
`;

exports[`<Col /> sm={true} -> class='col-sm' 1`] = `
<div
  className="col-sm"
>
  hi
</div>
`;

exports[`<Col /> sm={true} order={1} -> class='col-sm order=1' 1`] = `
<div
  className="col-sm order-1"
>
  hi
</div>
`;

exports[`<Col /> sm={true} orderSm={1} orderLg={5}-> class='col-sm order-sm-1 order-lg-5' 1`] = `
<div
  className="col-sm order-sm-1 order-md-3 order-lg-5"
>
  hi
</div>
`;
